# passwort_manager

./: .gitignore  Cargo.toml  README.md  SETUP.md  package-release.sh  setup.sh
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/passwort_manager/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/passwort_manager/: AddEditScreen.kt  AppSettings.kt  AuditScreen.kt  AutofillActivity.kt  BiometricHelper.kt  BiometricUnlock.kt  CredentialFillActivity.kt  FillBroadcastReceiver.kt  FillTriggerActivity.kt  HealthAnalyzer.kt  HealthScreen.kt  HibpClient.kt  KeystoreCipher.kt  MainActivity.kt  PasswordGenerator.kt  PasswortAccessibilityService.kt  PasswortApp.kt  PasswortAutofillService.kt  PasswortCredentialProviderService.kt  QuickFillTileService.kt  QuickSaveTileService.kt  SaveActivity.kt  SettingsScreen.kt  TotpHelper.kt  VaultBridge.kt  VaultState.kt
android/app/src/main/java/com/example/passwort_manager/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_lock_status.xml
android/app/src/main/res/layout/: autofill_item.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  autofill_service.xml  credential_provider.xml  shortcuts.xml
android/app/src/test/java/com/example/passwort_manager/: ExampleUnitTest.kt
android/crypto/: Cargo.toml
android/crypto/src/: lib.rs
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
packaging/: install-native-host.sh  install.sh  passwort-manager.desktop  uninstall.sh
packaging/autostart/: passwort-autotype.desktop
packaging/native-messaging/: passwort_manager.chrome.json  passwort_manager.firefox.json
packaging/systemd/: passwortd.service
releases/: passwort-manager-0.4.0.xpi
src/: auth.rs  autotype.rs  config.rs  crypto.rs  generator.rs  gui.rs  health.rs  hibp.rs  importers.rs  inbox.rs  ipc.rs  lib.rs  main.rs  native_host.rs  portable.rs  qr.rs  session.rs  storage.rs  sync.rs  typing.rs  vault.rs
