[package]
name = "passwort_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
rand_core = "0.6.4"
password-auth = "0.3.0"
rusqlite = "0.30.0"
zeroize = { version = "1.8.2", features = ["derive"] }
base64 = "0.21.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "7.3"
libc = "0.2"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
arboard = "3"