[package]
name = "passwort_jni"
version = "0.1.0"
edition = "2021"

# Cross-compiled to Android as a cdylib (shared library — .so). Loaded
# from Kotlin via System.loadLibrary("passwort_jni"); each #[no_mangle]
# extern "C" Java_… entry point becomes a callable static native fn on
# the Kotlin side.
[lib]
name = "passwort_jni"
crate-type = ["cdylib"]

[dependencies]
# Same versions as the desktop crate so the on-disk vault format is
# byte-for-byte identical and a vault.json round-trips between Linux
# and Android.
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
rand_core = "0.6.4"
base64 = "0.21.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1.8.2", features = ["derive"] }
# JNI bridge: provides JNIEnv, jstring, jbyteArray etc. so we can speak
# the JVM ABI without writing C glue. Same crate every Rust-on-Android
# project uses.
jni = { version = "0.21", default-features = false }
